--- a/css/style.css
+++ b/css/style.css
@@ -27,10 +27,10 @@ main {
   align-items: center;
   justify-content: center;
 }
-h2 {
+h1 {
   color: var(--Very-Dark-Grayish-Blue);
   line-height: 1;
-  font-size: 2rem;
+  font-size: 1.5rem;
   font-weight: 500;
 }
 p {
@@ -50,10 +50,10 @@ p {
   box-shadow: 2px 2px 5px rgba(0, 0, 0, 0.1);
 }
 .text {
-  padding: 2rem 2rem 1rem 2rem;
+  padding: 3rem 3rem 1rem 3rem;
   display: flex;
   flex-direction: column;
-  gap: 2rem;
+  gap: 1.5rem;
 }
 .img-container {
   border-radius: 1rem 1rem 0 0;
@@ -66,12 +66,17 @@ p {
 }
 .drawers-img {
   width: 100%;
+  object-fit: cover;
+  object-position: left;
+}
+button {
+  border: none;
 }
 .profile-container {
   display: flex;
   align-items: center;
   justify-content: space-between;
-  padding: 0 2rem;
+  padding: 0 3rem;
   height: 6rem;
 }
 .profile-picture {
